--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -153,13 +153,7 @@ To see release notes for another version, select the version from the dropdown a
 
 <%# The below partial is in https://github.com/pivotal-cf/docs-partials %>
 
-<%= partial vars.path_to_partials + '/services/on-demand-service-table', :locals => {
-  :service_name => vars.product_full,
-  :rabbit => vars.product_full,
-  :redis => "Redis for VMware Tanzu Application Service",
-  :mysql => "VMware Tanzu SQL with MySQL for VMs",
-  :cloud_cache => "VMware Tanzu GemFire for VMs",
-  :gemfire => "VMware GemFire"
+<%= partial vars.path_to_partials + '/services/on-demand-service-table', :locals => {:service_name => vars.product_full, :rabbit => vars.product_full, :redis => "Redis for VMware Tanzu Application Service", :mysql => "VMware Tanzu SQL with MySQL for VMs", :cloud_cache => "VMware Tanzu GemFire for VMs", :gemfire => "VMware GemFire"
 } %>
 
 
