--- a/about.html.md.erb
+++ b/about.html.md.erb
@@ -17,7 +17,7 @@ For information about architecture of the older, pre-provisioned service, see
 
 <h2> <a id="service-network"></a>Service Network Requirement </h2>
 
-<%# The below partial is in https://github.com/pivotal-cf/docs-partials %>
+
 
 <%= partial vars.path_to_partials + '/services/service-networks-v3' %>
 
@@ -25,8 +25,7 @@ For information about architecture of the older, pre-provisioned service, see
 
 <%# The below partial is in https://github.com/pivotal-cf/docs-partials %>
 
-<%= partial vars.path_to_partials + '/services/on_demand_architecture', :locals => {
-  :product_short => vars.product_short} %>
+<%= partial vars.path_to_partials + '/services/on_demand_architecture', :locals => { :product_short => vars.product_short} %>
 
 
 <h2> <a id="network-rules"></a>Required Networking Rules for On-Demand Services </h2>
