--- a/prepare-tls.html.md.erb
+++ b/prepare-tls.html.md.erb
@@ -9,7 +9,4 @@ owner: RabbitMQ
 
 <strong><%= modified_date %></strong>
 
-<%= partial vars.path_to_partials + "/services/prepare-tls-v2", :locals => {
-  :product_full => vars.product_full,
-  :product_short => vars.product_short
-} %>
+<%= partial vars.path_to_partials + "/services/prepare-tls-v2", :locals => {:product_full => vars.product_full, :product_short => vars.product_short} %>
