--- a/upgrade.html.md.erb
+++ b/upgrade.html.md.erb
@@ -156,3 +156,8 @@ The <%= vars.product_short %> tile uses floating stemcells in v1.14.0 and later.
 This means that the tile can be updated to use the latest minor version of a stemcell,
 without the need to download a new <%= vars.product_short %> patch release from Pivnet.
 For more information see [Floating Stemcells](https://docs.pivotal.io/pivotalcf/customizing/understanding-stemcells.html).
+
+
+some partial stuff
+
+<%= partial vars.path_to_partials + '/services/release-policy', :locals => { :os_name => "RabbitMQ"} %>
