--- a/troubleshoot.html.md.erb
+++ b/troubleshoot.html.md.erb
@@ -19,3 +19,8 @@ Start here if you are responding to a specific error or error messages.
 ### <a id="x-product"></a> Common Services Errors
 
 The following errors occur in multiple services:
+
+testing partials 
+
+
+<%= partial vars.path_to_partials + '/troubleshoot-example' %>
